Moved to Java 21